# meridian

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
.cargo/: config
.gitlab/: build-cxx-astra.yml  build-cxx-ubuntu.yml  build-rust-astra.yml  build-rust-ubuntu.yml  build-rust-windows.yml  compose-dynamic.yml  compose-static.yml  deploy-cxx-bindings.yml  prerequisite-astra.yml  prerequisite-ubuntu.yml  prerequisite-windows.yml  test-cxx-astra.yml  test-cxx-ubuntu.yml  test-rust-windows.yml  test-rust.yml
.gitlab/shell/: compose-static.sh  compose.sh
bindings/c++/: .gitignore  CMakeLists.txt
bindings/c++/include/Meridian/: Meridian  meridian_rust_ffi.h  meridian_wrapper.h
bindings/c++/plugins/: .gitignore
bindings/c++/src/c++/: meridian_wrapper.c++
bindings/c++/tests/: tests-elevation.c++  tests-main.c++
src/: config.rs  errors.rs  ffi.rs  lib.rs  main.rs  utils.rs
src/coordinate_system/: chunk.rs  core.rs  mod.rs  point.rs
src/elevation/: elevation.rs  mod.rs  profile.rs
src/geotiff/: geotiff.rs  mod.rs
src/geotiff/parser/: compression.rs  endianness.rs  error.rs  field.rs  ifd.rs  mod.rs  tags.rs  tiff_file.rs  value.rs
src/heightmap/: heightmap_conversion.rs  mod.rs  prefetcher.rs
src/heightmap/heightmap_conversion/: mod.rs
src/positioning/: consts.rs  geocoordinate.rs  georectangle.rs  mod.rs  utils.rs
src/tile_map/: map_tile.rs  mod.rs  tile_loader.rs
src/tile_storage/: limiter.rs  mod.rs  net_fetch.rs  quarter.rs  tile_identity.rs  tile_signature.rs  tile_storage.rs
