[package]
name = "meridian"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Ryazancev <75864292+whs31@user.noreply.github.com>"]

#[lib]
#crate-type = ["cdylib"]
#bench = false

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.14"
ini = "1.3.0"
once_cell = "1.18.0"
geotiff-rs = "0.1.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
chrono = "0.4.31"
imagesize = "0.12.0"
nav-types = "0.5.2"