# cargo-features = ["edition2021"]
[package]
name = "meridian"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Ryazancev <75864292+whs31@user.noreply.github.com>"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
bench = false

[[bin]]
name = "MeridianBenchmark"
bench = false

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.14"
ini = "1.3.0"
once_cell = "1.17.2"
reqwest = { version = "0.11.22", features = ["stream", "json"] }
chrono = "0.4.31"
imagesize = "0.12.0"
float-cmp = "0.9.0"
image = "0.24.7"
indicatif = "0.17.7"
futures-util = "0.3.29"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
thiserror = "1.0.50"
weezl = "0.1.7"
json = "0.12.4"